changed the view history button to an anchor in the name with same functionality, the button was causing issues with placement on mobile viewports

--- a/style.css
+++ b/style.css
@@ -126,7 +126,9 @@ content: "SFSDF";
   height: 20px;
   font-size: 10px;
   padding: 0px;
-  margin-left: -10px;
+  margin: auto;
+  
 }
+
 
 /* End Modal Styles */
